dvisvgm-0.8.7
- fixed bounding box issue concerning italic corrections
- PS handler: zero-length paths are now drawn as dots
- PS handler: fixed a path positioning issue
- added macro {?nl} to be used with special dvisvgm:raw

dvisvgm-0.8.6
- renamed command-line option --bbox-format to --bbox
- option --bbox can now be used to set an arbitrary bounding box
- added the two special variants "dvisvgm:bbox abs" and "dvisvgm:bbox fix"
- PS clipping path sequences and intersections are now handled correctly
- fixed a PS bounding box bug
- fixed a couple of PS positioning issues reported by John Bowman
- fixed a bit shift overflow in the font tracer occurred on 64-bit systems

dvisvgm-0.8.5
- added an optional depth parameter to special dvisvgm:raw
- updated the man page
- added LGPL license text needed for the gzstream wrapper classes

dvisvgm-0.8.4
- improved the command-line parser to be more POSIX-compliant
- added a simple progress indicator for time-consuming special operations
- option --cache prints more information about the cached fonts
- fixed a clipping bug in the PostScript handler
  (thanks to John Bowman for also providing a patch for this issue)
- fixed a bug in computation of the PS bounding box
- fixed a memory bug in the GF tracer module

dvisvgm-0.8.3
- added basic evaluation of the PostScript "show" operator
  (handles PSTricks Type 3 fonts properly now)
- improved checks for Ghostscript and potrace library in configure script
- external Ghostscript and potrace development files are used if available
- PostScript header/prologue files are now loaded regardless of converted page
- replaced command-line option variant --cache=? by --cache

dvisvgm-0.8.2
- changed license of dvisvgm to GPL version 3 or later
- replaced getopt-based commandline parser by own implementation
  in order to simplify future internationalizations
- fixed memory bug in fontmap reader

dvisvgm-0.8.1
- added evaluation of more psfile parameters